--- a/composer.json
+++ b/composer.json
@@ -53,9 +53,9 @@
     "laminas/laminas-hydrator": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": ">=3.7,<4",
-    "phpmd/phpmd": "1.4.*",
-    "squizlabs/php_codesniffer": "1.4.*",
+    "phpunit/phpunit": "^9.0",
+    "phpmd/phpmd": "2.*",
+    "squizlabs/php_codesniffer": "3.*",
     "laminas/laminas-captcha": "^2.6"
   },
   "suggest": {
